# internet-check

./: .gitignore  README.md
netcheck-app/: README.md  index.html  package.json  vite.config.ts
netcheck-app/src/: App.tsx  styles.css  types.ts
netcheck-app/src-tauri/: Cargo.toml  tauri.conf.json
netcheck-app/src-tauri/capabilities/: default.json
netcheck-app/src-tauri/icons/: icon.icns
netcheck-app/src-tauri/src/: diagnostic.rs  lib.rs  main.rs  report_generator.rs  types.rs
netcheck-app/src/components/: HackerTerminal.tsx  HopDetailPanel.tsx  NetworkFlowGraph.tsx  StabilityChart.tsx  TimingWaterfall.tsx  index.ts  types.ts
scripts/: browser_analysis.sh  comprehensive_compare.sh  network_diagnostic.sh  slack-deep-check.sh  unified_diagnostic.sh
