[package]
name = "netcheck-app"
version = "1.0.0"
description = "Network Diagnostic Tool with Parallel Execution"
authors = ["NetCheck Team"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "netcheck_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
regex = "1"
thiserror = "1"
docx-rs = "0.4"
zip = "0.6"
tauri-plugin-dialog = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
